--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,4 +43,4 @@ play.evolutions.enabled=false
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
 
-play.application.loader = "loader.SpringApplicationLoader_draft"
+play.application.loader = "loader.MyLoader"
