go with jroper base, still not running but getting closer

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,4 +43,7 @@ play.evolutions.enabled=false
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
 
-play.application.loader = "loader.MyLoader"
+play.application.loader = "loader.SpringApplicationLoader_draft"
+#play.modules.enabled += "module.SpringModule"
+
+play.modules.enabled += "play.api.inject.BuiltinModule"
