start cleaning and organize

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,7 +43,7 @@ play.evolutions.enabled=false
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
 
-play.application.loader = "loader.SpringApplicationLoader_draft"
+play.application.loader = "play.api.inject.spring.SpringApplicationLoader"
 #play.modules.enabled += "module.SpringModule"
 
 play.modules.enabled += "play.api.inject.BuiltinModule"
