--- a/conf/application.conf
+++ b/conf/application.conf
@@ -47,3 +47,5 @@ play.application.loader = "play.api.inject.spring.SpringApplicationLoader"
 #play.modules.enabled += "module.SpringModule"
 
 play.modules.enabled += "play.api.inject.BuiltinModule"
+
+play.spring.configs += "config.AppConfig"
