cleanup demo code, and use a Play Module for demo

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -47,5 +47,6 @@ play.application.loader = "play.api.inject.spring.SpringApplicationLoader"
 #play.modules.enabled += "module.SpringModule"
 
 play.modules.enabled += "play.api.inject.BuiltinModule"
+play.modules.enabled += "com.demo.spring.MyModule"
 
 play.spring.configs += "config.AppConfig"
