--- a/conf/application.conf
+++ b/conf/application.conf
@@ -48,3 +48,4 @@ play.application.loader = "play.api.inject.spring.SpringApplicationLoader"
 play.modules.enabled += "com.demo.spring.MyModule"
 
 play.spring.configs += "config.AppConfig"
+play.spring.configs += "play.api.spring.CoreConfig"
