let option to disable some of the default bindings (issue with Crypto class and spring circular dependencies)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -49,3 +49,4 @@ play.modules.enabled += "com.demo.spring.MyModule"
 
 play.spring.configs += "config.AppConfig"
 play.spring.configs += "play.api.spring.CoreConfig"
+play.bindings.disabled += "play.api.libs.Crypto"
