--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,7 +43,7 @@ play.evolutions.enabled=false
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
 
-play.application.loader = "play.api.inject.spring.SpringApplicationLoader"
+play.application.loader = "com.actimust.play.spring.SpringApplicationLoader"
 
 play.modules.enabled += "com.demo.spring.MyModule"
 
